<resources>
    <string name="app_name" translatable="false">Giantbomb Video Player</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="format">json</string>

    <string name="user_has_completed_onboarding">user_has_completed_onboarding</string>

    <string name="auth_hint">Enter Code Here</string>
    <string name="auth_explanation">To enjoy premium videos you must authenticate by visiting the link bellow. Then simply enter the code here and click the button to confirm.</string>
    <string name="auth_url">http://www.giantbomb.com/boxee/</string>
    <string name="api_key_request">https://www.giantbomb.com/api/validate?link_code=</string>

    <string name="slide_policy_explanation">You cannot use the app without signing in</string>

    <string name="title_activity_video_detail">VideoDetailActivity</string>
    <string name="title_activity_video_web_view">WebViewActivity</string>
    <string name="title_activity_authentication">Authenticate</string>
    <string name="title_video_list">Videos</string>

    <string name="title_home">Home</string>
    <string name="title_downloads">Downloads</string>
    <string name="title_settings">Settings</string>

    <string name="settings_section_account">Account</string>
    <string name="settings_description_account">Manage your premium authentication</string>
    <string name="settings_account_premium_title">Premium Account</string>
    <string name="settings_account_premium_subtitle">Launch authentication flow</string>
    <string name="pref_key_settings_account_premium">pref_key_settings_account_premium</string>
    <string name="settings_account_position_title">Sync Playback Position</string>
    <string name="settings_account_position_subtitle">Sync playback position to your account</string>
    <string name="pref_key_settings_account_position">pref_key_settings_account_position</string>

    <string name="settings_section_appearance">Appearance</string>
    <string name="settings_description_appearance">Change the look and feel of the app</string>
    <string name="settings_appearance_dark_title">Dark Mode</string>
    <string name="settings_appearance_dark_subtitle">Make the app dark, yo</string>
    <string name="pref_key_settings_appearance_dark">pref_key_settings_appearance_dark</string>

    <string name="settings_section_notifications">Notifications</string>
    <string name="settings_description_notifications">Manage notification settings</string>
    <string name="settings_notifications_system_title">Enable notifications</string>
    <string name="settings_notifications_system_subtitle">Go to system notification settings</string>
    <string name="pref_key_settings_notifications_system">pref_key_settings_notifications_system</string>

    <string name="settings_section_video">Video</string>
    <string name="settings_description_video">Manage your playback settings</string>
    <string name="settings_playback_pip_title">Picture in Picture</string>
    <string name="settings_playback_pip_subtitle">Enable or disable PiP</string>
    <string name="pref_key_settings_playback_pip">pref_key_settings_playback_pip</string>
    <string name="settings_playback_quality_title">Default Quality</string>
    <string name="settings_playback_quality_subtitle">The default quality setting for video playback</string>
    <string name="pref_key_settings_playback_quality">pref_key_settings_playback_quality</string>
    <string name="settings_download_private_title">Download Location</string>
    <string name="settings_download_private_subtitle">Chose between saving files private to the app, the Movie directory, or the Downloads directory</string>
    <string name="pref_key_settings_download_private">pref_key_settings_download_private</string>

    <string-array name="download_locations">
        <item>Private</item>
        <item>Movies</item>
        <item>Downloads</item>
    </string-array>

    <string-array name="quality_options">
        <item>Low</item>
        <item>High</item>
        <item>HD</item>
        <item>YouTube</item>
    </string-array>

    <string name="settings_section_download">Download</string>
    <string name="settings_description_download">Manage storage usage for downloads</string>
    <string name="settings_downloads_space_title">Disk size limit</string>
    <string name="settings_downloads_space_subtitle">Set limits for how much space the app will use for caching. This does not affect manual downloads.</string>
    <string name="pref_key_settings_downloads_space">pref_key_settings_downloads_space</string>

    <string-array name="navigation_drawer_items">
        <item>Videos</item>
        <item>Authentication</item>
    </string-array>

    <array name="navigation_drawer_icons">
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
    </array>
    <string name="title_activity_onboarding">OnboardingActivity</string>

    <string name="navigation_drawer_header_title" translatable="false">La Bomba Gigante</string>

    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="info">Info</string>
    <string name="info_description">Information about this video</string>
    <string name="info_uri" translatable="false">https://peach.blender.org/</string>
    <string name="fast_forward">Fast forward</string>
    <string name="fast_rewind">Fast rewind</string>
    <string name="minimize">Minimize</string>
    <string name="search_hint">Search</string>
    <string name="filter">Filter</string>
    <string name="title_activity_leanback">Leanback LeanbackActivity Title</string>
    <string name="browse_title"><![CDATA[Videos by Your Company]]></string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>

    <string name="coming_soon">Coming Soon</string>
</resources>
